outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_00-23-35/evaluations/problem_eval-8304132224122957184_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance increases as the problem size decreases, while penalizing high-variance nodes to favor central locations, and uses a hybrid scoring system that balances immediate distance with long-term centrality through adaptive weights and variance consideration.}
                                                                                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance increases as the problem size decreases, while penalizing high-variance nodes to favor central locations, and uses a hybrid scoring system that balances immediate distance with long-term centrality through adaptive weights and variance consideration.}
                                                                                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'
